@@ -1,22 +1,22 @@
 <?php
 	/**
-	*	Placeto CMS - News
-	*		Provides a library of News functions, such as: News widget, News page, RSS and ATOM.
+	*	Placeto CMS - Sitemap
+	*		Provides a visitor and xml sitemap
 	*
 	*	Author: Benjamin Jay Young
 	*		http://www.blahertech.org/projects/placeto
 	*
-	*	Placeto Mod - News (C) BlaherTech - Benjamin Jay Young 2009
+	*	Placeto Mod - Sitemap (C) BlaherTech - Benjamin Jay Young 2009
     *	Placeto Mods are released under the GNU GPL 3.0 which is free and open source.
 	*	You may edit or distrubute any Placeto Mod at your own free will, with the proper accreditation.
 	**/
 
-	$mods['news']=array
+	$mods['sitemap']=array
 	(
-		'name'=>'News',
+		'name'=>'Sitemaping tool',
 		'author'=>'Benjamin Jay Young',
 		'version'=>'1.0',
-		'description'=>'Library for News, RSS, Atom and other news features',
-		'release'=>'2009-12-16'
+		'description'=>'Provies a visitor and xml google sitemap.',
+		'release'=>'2009-12-18'
 	);
 ?>
