@@ -1,0 +1,16 @@
+<?php
+	/**
+	*	Placeto CMS - Sitemap
+	*		Provides a visitor and xml sitemap
+	*
+	*	Author: Benjamin Jay Young
+	*		http://www.blahertech.org/projects/placeto
+	*
+	*	Placeto Mod - Sitemap (C) BlaherTech - Benjamin Jay Young 2009
+    *	Placeto Mods are released under the GNU GPL 3.0 which is free and open source.
+	*	You may edit or distrubute any Placeto Mod at your own free will, with the proper accreditation.
+	**/
+
+	function placeto_sitemap_page(){} // Page for visitors exploring
+	function placeto_sitemap_xml_page(){} // Google sitemap page
+?>
