@@ -4,6 +4,7 @@ Alpha Rv.4
 * Fixed Images and News Mods
 * Added Downloads Mod
 * Added placeto_cache_clear() to Cache Mod
+* Added Sitemap mod
 
 Alpha Rv.3
 * Added security by rename mod's index.php to mod.php
